--- a/index.html
+++ b/index.html
@@ -388,18 +388,18 @@
             <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
           </h3>
         </button>
-        <h4>My First Game Jam: Summer 2020</h4>
-        <p> 
-          <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
-        </p>
-        <h4>Extra Credits Game Jam #6</h4>
-        <p> 
-          <a href="https://pootmoop-studio.itch.io/man-down">Man Down</a>
-        </p>
-        <h4>Great Harvest Game Jam</h4>
-        <p> 
-          <a href="https://pootpootpoot.itch.io/oubliettes">Oubliettes</a>
-        </p>
+        <button class="collapsible" style = "width:100%; margin:auto">
+          <h2 style = "font-family: Montserrat;">Extra Credits Game Jam #6</h2>
+          <h3 style = "font-family: Montserrat;">
+            <a href="https://pootmoop-studio.itch.io/man-down">Man Down</a>
+          </h3>
+        </button>
+        <button class="collapsible" style = "width:100%; margin:auto">
+          <h2 style = "font-family: Montserrat;">Great Harvest Game Jam</h2>
+          <h3 style = "font-family: Montserrat;">
+            <a href="https://pootpootpoot.itch.io/oubliettes">Oubliettes</a>
+          </h3>
+        </button>
     </div>
 
 
