--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       </h2>
     </button>
     <div class = "collapsiblecontent" style = "float:center">
-      <div class = "contentBx" style = "width:100%; margin:auto">
+      <div class = "contentBx active" style = "width:100%; margin:auto">
         <h3> I love Game Jams! </h3>
           <p>
             Game Jams are my favorite way to explore ideas, improve my skills, and test my time-crunching skills!
