--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           I have participated in a few Game Jams and intend to participate in many more in the future. You can find my 
           independent or group submissions below! 
         </p>
-        <button class="collapsible" style = "width:100%; margin:auto">
+        <button class="collapsible" style = "width:100%; margin:auto; background-color:#f1f1f1;">
           <h2 style = "font-family: Montserrat;">My First Game Jam: Summer 2020</h2>
           <h3 style = "font-family: Montserrat;">
             <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
