--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
       My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
       Ever since I was a little boy, I have always loved to play video games and been fascinated by the work behind them. 
       Whether the game is a triple - A title or something as simple as Flappy bird, on a high end desktop or a SNES, I have always seen the charm of the art. 
-      I have had a good amount of experience in Data Science and Mathematics in professional settings but I intend on converting these skills into creating wonderful games. 
-      I am currently studying the field of game development and creating as I learn.
+      I am turning this passion and the skills and experiences I've acquired in professional and academic settings into creating wonderful games.
       These creations will be available in the projects tab, as well as other past, present and future projects!
-       
     <br>
     <br>
       I am a French native but I have lived and studied in different parts of the world. 
@@ -392,7 +390,7 @@
           <h4 style = "font-family: Montserrat;">
             <a href="https://pootmoop-studio.itch.io/man-down">Man Down</a>
           </h4>
-          
+
           <h3 style = "font-family: Montserrat;">My First Game Jam: Summer 2020</h3>
           <h4 style = "font-family: Montserrat;">
             <a href="https://pootmoop-studio.itch.io/diaperchange">Diaper Change</a>
