--- a/index.html
+++ b/index.html
@@ -381,6 +381,11 @@
           independent or group submissions below! 
         </p>
 
+        <h3 style = "font-family: Montserrat;">Big Brain Game Jam 2.0</h3>
+          <h4 style = "font-family: Montserrat;">
+            <a href="https://pootpootpoot.itch.io/twisted-death-loop">Twisted Death Loop</a>
+          </h4>
+
            <h3 style = "font-family: Montserrat;">Great Harvest Game Jam</h3>
           <h4 style = "font-family: Montserrat;">
             <a href="https://pootpootpoot.itch.io/oubliettes">Oubliettes</a>
