--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
         <h3 style = "font-family: Montserrat;">Big Brain Game Jam 2.0</h3>
           <h4 style = "font-family: Montserrat;">
-            <a href="https://pootpootpoot.itch.io/twisted-death-loop">Twisted Death Loop</a>
+            <a href="https://pootpootpoot.itch.io/twisted-loop">Twisted Loop</a>
           </h4>
 
            <h3 style = "font-family: Montserrat;">Great Harvest Game Jam</h3>
