--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Dopetrope by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
+
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>Georges Brunet</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +15,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">Georges Brunet</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -52,8 +49,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is Dopetrope.</h2>
-								<p>A responsive template by HTML5 UP</p>
+								<h2>Hello. My name is Georges.</h2>
+								<p>Programmer, Data Scientist, Artist, and Video Game Enthusiast</p>
 							</header>
 						</section>
 
@@ -88,12 +85,12 @@
 									</section>
 								</div>
 							</div>
-							<footer>
+							<!--<footer>
 								<ul class="actions">
 									<li><a href="#" class="button large">Get Started</a></li>
 									<li><a href="#" class="button alt large">Learn More</a></li>
 								</ul>
-							</footer>
+							</footer> -->
 						</section>
 
 				</section>
