--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
 				</section>
 
 			<!-- Footer -->
-				<section id="footer">
+				<!-- Test Comment Out
+        <section id="footer">
 					<div class="container">
 						<div class="row">
 							<div class="col-8 col-12-medium">
@@ -363,7 +364,7 @@
 							</div>
 							<div class="col-12">
 
-								<!-- Copyright -->
+								<!-- Copyright 
 									<div id="copyright">
 										<ul class="links">
 											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
@@ -373,7 +374,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 		</div>
 
