--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 							</header>
 						</section>
 
-					<!-- Intro -->
+          <!-- Intro -->
+          <!-- Test Comment Out the three blocks
 						<section id="intro" class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
@@ -90,8 +91,9 @@
 									<li><a href="#" class="button large">Get Started</a></li>
 									<li><a href="#" class="button alt large">Learn More</a></li>
 								</ul>
-							</footer> -->
-						</section>
+							</footer> 
+            </section> 
+          -->
 
 				</section>
 
