--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
 										<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
 									</ul>
-									<ul class="contact">
+									<!--<ul class="contact">
 										<li>
 											<h3>Address</h3>
 											<p>
@@ -132,9 +132,9 @@
 											<h3>Phone</h3>
 											<p>(800) 000-0000</p>
 										</li>
-									</ul>
+									</ul>-->
                 </section>
-                
+                <!--
 									<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
@@ -161,7 +161,7 @@
 										</footer>
 									</section>
 
-							</div>
+							</div> -->
 							<div class="col-8 col-12-medium imp-medium">
 
 								<!-- Content -->
