--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
 										</li>
 									</ul>-->
                 </section>
-                <!--
 									<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
@@ -161,7 +160,7 @@
 										</footer>
 									</section>
 
-							</div> -->
+							</div>
 							<div class="col-8 col-12-medium imp-medium">
 
 								<!-- Content -->
