Home Page Layout

--- a/index.html
+++ b/index.html
@@ -68,17 +68,10 @@
                   <a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
                   <header>
                     <ul class="social">
-                      <li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-                      <li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-                      <li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-                      <li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
                       <li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
                     </ul>
                   </header>
-                  <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                  <!--<footer>
-                    <a href="#" class="button alt">Magna sed taciti</a>
-                  </footer>-->
+                  <p>Find my contact information on LinkedIn, and my projects on itch.io and Github!</p>
                 </section>
               </div>
               
@@ -88,55 +81,29 @@
 									<article class="box post">
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h2>Left Sidebar</h2>
-											<p>Lorem ipsum dolor sit amet feugiat</p>
+											<p>Welcome!</p>
 										</header>
 										<p>
-											Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
-											hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
-											Proin elementum, nibh non egestas sodales, augue quam aliquet est, id egestas diam justo adipiscing ante.
-											Pellentesque tempus nulla non urna eleifend ut ultrices nisi faucibus.
+											My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
+                      Ever since I was a little boy, I have always loved to play video games and been fascinated by the work behind them. 
+                      Whether the game is a triple - A title or something as simple as Flappy bird, on a high end desktop or a SNES, I have always seen the charm of the art. 
+                      I am turning this passion and the skills and experiences I've acquired in professional and academic settings into creating wonderful games.
+                      These creations will be available in the projects tab, as well as other past, present and future projects!
 										</p>
 										<p>
-											Praesent a dolor leo. Duis in felis in tortor lobortis volutpat et pretium tellus. Vestibulum ac ante nisl,
-											a elementum odio. Duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-											placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-											eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-											elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-											sit amet nullam consequat feugiat dolore tempus.
-										</p>
-										<section>
-											<header>
-												<h3>Something else</h3>
-											</header>
-											<p>
-												Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-												placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-										</section>
-										<section>
-											<header>
-												<h3>So in conclusion ...</h3>
-											</header>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-												Maecenas sagittis convallis justo vel mattis.
-											</p>
-										</section>
+											I am a French native but I have lived and studied in different parts of the world. 
+                      I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey),
+                      Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado.
+                      I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be s
+                      culptures or paintings, watch sports, or my personal favorite: play video games.
+                    </p>
+                    <p>
+                      I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics 
+                      with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university 
+                      I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of
+                      the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
+                    </p>
 									</article>
-
 							</div>
 						</div>
 					</div>
