--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               <li>
                 <a href="#">Projects</a>
                 <ul>
-                  <li><a href="#">Game Jams</a></li>
-                  <li><a href="#">Magna phasellus</a></li>
-                  <li><a href="#">Etiam dolore nisl</a></li>
-                  <li>
+                  <li><a href="GameJams.html">Game Jams</a></li>
+                  <li><a href="#">GD50</a></li>
+                  <li><a href="#">IBM Certificate Capstone</a></li>
+                  <!--<li>
                     <a href="#">Phasellus consequat</a>
                     <ul>
                       <li><a href="#">Magna phasellus</a></li>
@@ -38,7 +38,7 @@
                     </ul>
                   </li>
                   <li><a href="#">Veroeros feugiat</a></li>
-                </ul>
+                </ul>-->
               </li>
               <li><a href="left-sidebar.html">Left Sidebar</a></li>
               <li><a href="right-sidebar.html">Right Sidebar</a></li>
