--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
-
+      <!-- Intro Start-->
 			<!-- Header -->
       <section id="header">
 
@@ -27,24 +27,14 @@
                   <li><a href="GameJams.html">Game Jams</a></li>
                   <li><a href="#">GD50</a></li>
                   <li><a href="#">IBM Certificate Capstone</a></li>
-                  <!--<li>
-                    <a href="#">Phasellus consequat</a>
-                    <ul>
-                      <li><a href="#">Magna phasellus</a></li>
-                      <li><a href="#">Etiam dolore nisl</a></li>
-                      <li><a href="#">Veroeros feugiat</a></li>
-                      <li><a href="#">Nisl sed aliquam</a></li>
-                      <li><a href="#">Dolore adipiscing</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Veroeros feugiat</a></li>
-                </ul>-->
+                </ul>
               </li>
               <li><a href="left-sidebar.html">Left Sidebar</a></li>
               <li><a href="right-sidebar.html">Right Sidebar</a></li>
               <li><a href="no-sidebar.html">No Sidebar</a></li>
             </ul>
           </nav>
+          <!-- Intro End-->
 
         <!-- Banner -->
           <section id="banner">
@@ -53,8 +43,6 @@
               <p>Programmer, Data Scientist, Artist, and Video Game Enthusiast</p>
             </header>
           </section>
-
-
       </section>
       
       <!-- Test Setup-->
