--- a/GameJams.html
+++ b/GameJams.html
@@ -46,19 +46,21 @@
 							<!-- Portfolio -->
 							<section>
 								<header class="major">
-									<h2>My Portfolio</h2>
+									<h2>GAME JAMS</h2>
 								</header>
 								<div class="row">
+
+									<!-- Game Jam Boxes! -->
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
 											<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 											<header>
-												<h3>Ipsum feugiat et dolor</h3>
+												<h3>My First Game Jam: Summer 2020</h3>
 											</header>
-											<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+											<p> My first game jam which lasted 2 weeks. Olivia Maciejewska and I made a cute infinite runner to match the theme of "change". The goal is to avoid toys while escaping the clutches of your mother. Don't let your diaper get changed!</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button alt">Find out more</a></li>
+													<li><a href="https://pootmoop-studio.itch.io/diaperchange" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -67,12 +69,12 @@
 										<section class="box">
 											<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 											<header>
-												<h3>Sed etiam lorem nulla</h3>
+												<h3>Big Brain Game Jam 2.0</h3>
 											</header>
-											<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+											<p> A short 3 day jam with the goal to complete a game in the given time! The player must avoid the spinning pole, which will push you into lava if you do not jump or counter! This minigame earned 2nd place, with the highest ranking in visuals and theme.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button alt">Find out more</a></li>
+													<li><a href="https://pootpootpoot.itch.io/twisted-loop" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -81,12 +83,12 @@
 										<section class="box">
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<header>
-												<h3>Consequat et tempus</h3>
+												<h3>Great Harvest Game Jam</h3>
 											</header>
-											<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+											<p> A month long game jam, and my submission to the GD50 final project. This prototype is a playground for testing 2D mechanics from a bar hub to instantiated mission with various mechanics.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button alt">Find out more</a></li>
+													<li><a href="https://pootpootpoot.itch.io/oubliettes" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -95,12 +97,12 @@
 										<section class="box">
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 											<header>
-												<h3>Blandit sed adipiscing</h3>
+												<h3>Extra Credits Game Jam #6</h3>
 											</header>
-											<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+											<p> A 48 hour Game Jam completed by Olivia Maciejewska and I. This game was made using Core, a game engine based on Epic Games's Unreal Engine. This multiplayer search-and-rescue FPS is based on the Spanish Flu and set on WWI.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button alt">Find out more</a></li>
+													<li><a href="https://pootmoop-studio.itch.io/man-down" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -109,30 +111,18 @@
 										<section class="box">
 											<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 											<header>
-												<h3>Etiam nisl consequat</h3>
+												<h3>Game Off Game Jam 2020</h3>
 											</header>
-											<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+											<p>Hosted by Github, this month long game jam is a project completed with Olivia Maciejewska.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button alt">Find out more</a></li>
+													<li><a href="#" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
 									</div>
-									<div class="col-4 col-6-medium col-12-small">
-										<section class="box">
-											<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-											<header>
-												<h3>Dolore nisl feugiat</h3>
-											</header>
-											<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button alt">Find out more</a></li>
-												</ul>
-											</footer>
-										</section>
-									</div>
+									<!-- End Game Jam Boxes-->
+
 								</div>
 							</section>
 						</div>
