--- a/GameJams.html
+++ b/GameJams.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>Georges Brunet</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,20 +18,21 @@
 	
 			<!-- Nav -->
 				<nav id="nav">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li>
-					<a href="#">Projects</a>
 					<ul>
-						<li><a href="GameJams.html">Game Jams</a></li>
-						<li><a href="#">GD50</a></li>
-						<li><a href="#">IBM Certificate Capstone</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="Work.html">Work</a></li>
+						<li><a href="Education.html">Education</a></li>
+						<li><a href="Skills.html">Skills</a></li>
+						<li class="current">
+							<a href="#">Projects</a>
+							<ul>
+							<li><a href="GameJams.html">Game Jams</a></li>
+							<li><a href="GD50.html">GD50</a></li>
+							<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
+							</ul>
+						</li>
+						<li><a href="Resume.html">Resume</a></li>
 					</ul>
-					</li>
-					<li><a href="left-sidebar.html">Left Sidebar</a></li>
-					<li><a href="right-sidebar.html">Right Sidebar</a></li>
-					<li><a href="no-sidebar.html">No Sidebar</a></li>
-				</ul>
 				</nav>
 				
 			</section>
@@ -57,7 +58,9 @@
 											<header>
 												<h3>My First Game Jam: Summer 2020</h3>
 											</header>
-											<p> My first game jam which lasted 2 weeks. Olivia Maciejewska and I made a cute infinite runner to match the theme of "change". The goal is to avoid toys while escaping the clutches of your mother. Don't let your diaper get changed!</p>
+											<p> My first game jam which lasted 2 weeks. Olivia Maciejewska and I made a cute infinite runner to match the 
+												theme of "change". The goal is to avoid toys while escaping the clutches of your mother. Don't let your 
+												diaper get changed!</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="https://pootmoop-studio.itch.io/diaperchange" class="button alt">View Submission</a></li>
@@ -71,7 +74,9 @@
 											<header>
 												<h3>Big Brain Game Jam 2.0</h3>
 											</header>
-											<p> A short 3 day jam with the goal to complete a game in the given time! The player must avoid the spinning pole, which will push you into lava if you do not jump or counter! This minigame earned 2nd place, with the highest ranking in visuals and theme.</p>
+											<p> A short 3 day jam with the goal to complete a game in the given time! The player must avoid the spinning 
+												pole, which will push you into lava if you do not jump or counter! This minigame earned 2nd place, with 
+												the highest ranking in visuals and theme.</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="https://pootpootpoot.itch.io/twisted-loop" class="button alt">View Submission</a></li>
@@ -85,7 +90,10 @@
 											<header>
 												<h3>Great Harvest Game Jam</h3>
 											</header>
-											<p> A month long game jam, and my submission to the GD50 final project. This prototype is a playground for testing 2D mechanics from a bar hub to instantiated mission with various mechanics.</p>
+											<p> A month long game jam, and my submission to the GD50 final project. This prototype is a playground for 
+												testing 2D mechanics from a bar hub to instantiated mission with various mechanics. The color scheme of
+												the game follows the pear-36 spectrum! 
+											</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="https://pootpootpoot.itch.io/oubliettes" class="button alt">View Submission</a></li>
@@ -99,7 +107,9 @@
 											<header>
 												<h3>Extra Credits Game Jam #6</h3>
 											</header>
-											<p> A 48 hour Game Jam completed by Olivia Maciejewska and I. This game was made using Core, a game engine based on Epic Games's Unreal Engine. This multiplayer search-and-rescue FPS is based on the Spanish Flu and set on WWI.</p>
+											<p> A 48 hour Game Jam completed by Olivia Maciejewska and I. This game was made using Core, a game engine 
+												based on Epic Games's Unreal Engine. This multiplayer search-and-rescue FPS is based on the Spanish Flu
+												 and set on WWI.</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="https://pootmoop-studio.itch.io/man-down" class="button alt">View Submission</a></li>
@@ -113,7 +123,10 @@
 											<header>
 												<h3>Game Off Game Jam 2020</h3>
 											</header>
-											<p>Hosted by Github, this month long game jam is a project completed with Olivia Maciejewska.</p>
+											<p>Hosted by Github, this month-long game jam is a project completed with Olivia Maciejewska. With the theme
+												of "Moonshot", we decided to make a resource management survival game where the player must micro manage
+												his ship in order to make it to a distant moon.
+											</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button alt">View Submission</a></li>
