--- a/Skills.html
+++ b/Skills.html
@@ -26,7 +26,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="Work.html">Work</a></li>
 								<li><a href="Education.html">Education</a></li>
-								<li><a href="Skills.html">Skills</a></li>
+								<li class="current"><a href="Skills.html">Skills</a></li>
 								<li>
 									<a href="#">Projects</a>
 									<ul>
@@ -35,7 +35,7 @@
 									<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
 									</ul>
 								</li>
-								<li class="current"><a href="Resume.html">Resume</a></li>
+								<li><a href="Resume.html">Resume</a></li>
 							</ul>
 						</nav>
 
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 				</section>
-
+				
 		</div>
 
 		<!-- Scripts -->
