--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
           <nav id="nav">
             <ul>
               <li class="current"><a href="index.html">Home</a></li>
+              <li><a href="Work.html">Work</a></li>
+              <li><a href="Education.html">Education</a></li>
+              <li><a href="Skills.html">Skills</a></li>
               <li>
                 <a href="#">Projects</a>
                 <ul>
                   <li><a href="GameJams.html">Game Jams</a></li>
-                  <li><a href="#">GD50</a></li>
-                  <li><a href="#">IBM Certificate Capstone</a></li>
+                  <li><a href="GD50.html">GD50</a></li>
+                  <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
                 </ul>
               </li>
-              <li><a href="left-sidebar.html">Left Sidebar</a></li>
-              <li><a href="right-sidebar.html">Right Sidebar</a></li>
-              <li><a href="no-sidebar.html">No Sidebar</a></li>
+              <li><a href="Resume.html">Resume</a></li>
             </ul>
           </nav>
           <!-- Intro End-->
